updated DeviceProps with new structure

--- a/Sources/YeeLampa/DeviceProps.plist
+++ b/Sources/YeeLampa/DeviceProps.plist
@@ -2,22 +2,30 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>yeelink.light.strip</key>
-	<array>
-		<string>power</string>
-		<string>bright</string>
-		<string>hue</string>
-		<string>sat</string>
-		<string>flowing</string>
-		<string>color_mode</string>
-		<string>rgb</string>
-		<string>delayoff</string>
-		<string>save_state</string>
-		<string>flow_params</string>
-		<string>lan_ctrl</string>
-		<string>init_power_opt</string>
-		<string>music_on</string>
-		<string>indicator_on</string>
-	</array>
+	<key>yeelink</key>
+	<dict>
+		<key>light</key>
+		<dict>
+			<key>lamp</key>
+			<array/>
+			<key>strip</key>
+			<array>
+				<string>power</string>
+				<string>bright</string>
+				<string>hue</string>
+				<string>sat</string>
+				<string>flowing</string>
+				<string>color_mode</string>
+				<string>rgb</string>
+				<string>delayoff</string>
+				<string>save_state</string>
+				<string>flow_params</string>
+				<string>lan_ctrl</string>
+				<string>init_power_opt</string>
+				<string>music_on</string>
+				<string>indicator_on</string>
+			</array>
+		</dict>
+	</dict>
 </dict>
 </plist>
